--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://donghyun0221.github.io/
+baseurl: " "
 
 # Site settings
-title: Awesome Title
+title: mypage
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
